fixed image squashing

--- a/webapp/src/styles/Header.scss
+++ b/webapp/src/styles/Header.scss
@@ -13,8 +13,8 @@ header {
     align-items: stretch;
 
     img {
-      max-height: 4em;
-      padding: 1em;
+      max-height: 3em;
+      margin: 1em;
     }
 
     .buttons-container {
